--- a/03struct_algorithm/document/刷题篇.md
+++ b/03struct_algorithm/document/刷题篇.md
@@ -2,6 +2,14 @@
 
 # 一、复杂度
 
+## 	1. 时间复杂度：
+
+​			算法的时间复杂度，是一个用于度量一个算法的运算时间的一个描述，记做T(o)=O(f(n))！
+
+## 	2. 空间复杂度：
+
+​			空间复杂度(Space Complexity)是对一个算法在运行过程中临时占用存储空间大小的量度，记做S(n)=O(f(n))！
+
 # 二、 对数器
 
 ## 1. 什么是对数器
@@ -32,7 +40,7 @@
 
 ### 	空间复杂度：
 
-​				O（1）
+​			O（1）
 
 ## 2. 冒泡排序算法
 
@@ -82,11 +90,9 @@
 
 ## 	2. 题目
 
-### 		2.1 在一个有序数组中，找某个数是否存在
-
-### 		2.2 在一个有序数组中，找 >= 某个数最左侧的位置
-
-### 		2.3 在一个有序数组中，找 <= 某个数最右侧的位置
+- 1. 在一个有序数组中，找某个数是否存在
+- 2. 在一个有序数组中，找 >= 某个数最左侧的位置
+- 3. 在一个有序数组中，找 <= 某个数最右侧的位置
 
 ### 		2.4 局部最小值问题
 
@@ -156,7 +162,7 @@
 
 ## 2. 题目描述
 
-- 1. 异或实现两数交换
+- 1. 异或实现两数交换（除此方法外，还有临时变量法，加减法）
 
 - 2. 一个数组中有一种数出现了奇数次，其他数都出现了偶数次，怎么找到打印这种数
 
@@ -165,3 +171,9 @@
 - 4. 一个数位为1的位共多少个
 
 - 5. 请保证数组中，只有一种数出现了K次，其他数都出现了M次
+
+# 七、链表
+
+- 1. 单链表和双链表反转
+
+- 2. 利用单链表删除给定值
